Final review paper updates - added appendices, arxiv and socarxiv validation data

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -56,12 +56,12 @@ arxiv_2019_open_data_results <-
 all_arxiv_2019_results <- 
   read_csv(here::here("outputs/control-data/arxiv_data_2019.csv"))
 
-# socarxiv_open_data_results <- 
-#   read_csv(here::here("outputs/data/socarxiv_open_data_results.csv"))
-# socarxiv_2019_open_data_results <- 
-#   read_csv(here::here("outputs/control-data/socarxiv_2019_open_data_results.csv"))
-# socarxiv_metadata_2019 <- 
-#   read_csv(here::here("outputs/control-data/socarxiv_metadata_2019.csv"))
+socarxiv_open_data_results <-
+  read_csv(here::here("outputs/data/socarxiv_open_data_results.csv"))
+socarxiv_2019_open_data_results <-
+  read_csv(here::here("outputs/control-data/socarxiv_2019_open_data_results.csv"))
+socarxiv_metadata_2019 <-
+  read_csv(here::here("outputs/control-data/socarxiv_metadata_2019.csv"))
 
 all_arxiv_results <- 
   all_arxiv_results %>% 
@@ -135,7 +135,7 @@ For pre-COVID-19 pre-prints, we created a local copy of each repository containi
 
 We checked our sampled pre-prints for open data and code markers using the Open Data Detection in Publications (ODDPub) text mining algorithm [@citePDDPub] within the `oddpub` R package [@citeODDPubpackage] (RRID:SCR_018385) . This required downloading each pre-print as a PDF and then converting the PDFs to text files. 
 <!-- Some papers from SocArXiv were only available in Word document format (.docx) and were downloaded as such and then converted to text format.  -->
-We then conducted the open data and open code detection procedure, which involved searching for keywords and other markers of open data and open code availability. This was conducted using the `open_data_search()` function from the `oddpub` package. Under original validation process, the ODDPub algorithm performed with a sensitivity of 0.73 and a specificity of 1.00 for open code detection and a sensitivity of 0.73 and a specificity of 0.97 for open data detection compared with manual screening [@citePDDPub].
+We then conducted the open data and open code detection procedure, which involved searching for keywords and other markers of open data and open code availability. This was conducted using the `open_data_search()` function from the `oddpub` package. Under the validation procedure from the original authors, the ODDPub algorithm performed with a sensitivity of 0.73 and a specificity of 1.00 for open code detection and a sensitivity of 0.73 and a specificity of 0.97 for open data detection compared with manual screening [@citePDDPub]. Since the ODDPub algorithm was developed specifically for biomedical publications, we conducted our own validation process for its performance on arXiv pre-prints. We found that the ODDPub algorithm performed with a sensitivity of 0.60 and a specificity of 0.98 for open code detection and a sensitivity of 0.67 and a specificity of 0.98 for open data detection compared with manual screening. Details of our validation procedure are contained in Appendix \@ref(oddpub-algorithm-performance-on-arxiv-pre-prints).
 
 What constitutes open code or open data is complicated and discipline specific. The details of the `oddpub` approach are available in @citePDDPub. The general criteria are that specific mention should be made of where the data and code are located, and that data should be as close to raw as possible. Data and code must also be freely accessible to anyone (no request, application, registration process, or affiliation required). Our work was conducted using the statistical programming language R [@citeR] (RRID:SCR_001905).
 
@@ -187,6 +187,7 @@ all %>%
   scale_x_date(breaks=as.Date(c("2020-01-01","2020-07-01", "2021-01-01")),
                    labels=c("Jan 2020", "Jul 2020", "Jan 2021")) +
   theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45)) +
   scale_fill_manual(values = cbPalette) +
   facet_wrap(~type,
              scales = "free_y")
@@ -241,7 +242,7 @@ all_2019 %>%
 
 Between June and December 2019, the number of pre-prints posted to medRxiv monthly saw an overall increase, which may be expected as the repository gained recognition and popularity in the medical research community (Figure \@ref(fig:2019-results-med-arxiv)). The number of pre-prints posted monthly to bioRxiv also saw a slight overall increase throughout 2019, while the number of those posted to arXiv fluctuated throughout the year (Figure \@ref(fig:2019-results-med-arxiv)). Due to its relative immaturity at the beginning of the COVID-19 pandemic, a significant portion of medRxiv's overall usage has been dedicated to COVID-19-related research. In total, 21,647 pre-prints were posted to medRxiv between June 2019 and 30 June, 2021, 13,194 of which (approximately 61 per cent) relate to COVID-19.
 
-Of the analyzed pre-prints from 2019, 93 per cent of those posted to arXiv, 63 per cent of those posted to bioRxiv, and 75 per cent of those posted to medRxiv showed no indication of open data or open code (Table \@ref(tab:2019-published)). 
+Of the analyzed pre-prints from 2019, 93 per cent of those posted to arXiv, 63 per cent of those posted to bioRxiv, and 75 per cent of those posted to medRxiv showed no indication of open data or open code. 
 
 ```{r monthly-papers-condition-stack-2019, fig.cap = "Number of sampled pre-prints posted in 2019 from arXiv (n = 1,200), bioRxiv (n = 1,200), and medRxiv (n = 913) distinguished by presence of open data or code markers", out.width="90%", fig.align = "center"}
 # Number of papers for each open data/code status per month
@@ -293,7 +294,7 @@ open_status %>%
   scale_fill_manual(values = cbPalette) +
   facet_wrap(~repo,
              scales = "free_y") +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) 
 
 ```
 
@@ -395,9 +396,9 @@ The number of pre-prints posted per month increased in the first half of 2020 ac
 
 ## Open data and code
 
-From the collection of all pre-prints related to COVID-19, we randomly sampled 3,910 pre-prints to analyze, stratified by repository. This sample is broken down as follows: 1,500 from medRxiv, 1,000 from arXiv, and 1,000 from bioRxiv. Broadly, we are unable to find markers of either open data or open code for 3,011 pre-prints or approximately 76 per cent of our sample (Table \@ref(tab:summarycounts-repositories)). Of the remaining pre-prints, 7 per cent contained open code markers only, 10 per cent contained open data markers only, and 8 per cent included markers of both open data and open code.
+From the collection of all pre-prints related to COVID-19, we randomly sampled 3,910 pre-prints to analyze, stratified by repository. This sample is broken down as follows: 1,500 from medRxiv, 1,000 from arXiv, and 1,000 from bioRxiv. Broadly, we are unable to find markers of either open data or open code for 3,011 pre-prints or approximately 76 per cent of our sample (Appendix \@ref(tables-with-specific-values-displayed-in-the-graphs) Table \@ref(tab:summarycounts-repositories)). Of the remaining pre-prints, 7 per cent contained open code markers only, 10 per cent contained open data markers only, and 8 per cent included markers of both open data and open code.
 
-When differentiated by repository, we observe that open data and code markers were absent from 75 per cent of the sampled arXiv pre-prints, 67 per cent of the sampled bioRxiv pre-prints, 79 per cent of the sampled medRxiv pre-prints. The distribution of the remaining portion of pre-prints also varies by repository (Table \@ref(tab:summarycounts-repositories)). Notably, 28 per cent of sampled pre-prints from bioRxiv contained open data markers and 22 per cent of sampled arXiv pre-prints contained markers of open code, the highest proportions of any repository for each type of marker. Our results are similar to @mcguinness2021descriptive, who focus on medRxiv and find that 23 per cent describe open data.
+When differentiated by repository, we observe that open data and code markers were absent from 75 per cent of the sampled arXiv pre-prints, 67 per cent of the sampled bioRxiv pre-prints, 79 per cent of the sampled medRxiv pre-prints. The distribution of the remaining portion of pre-prints also varies by repository (Appendix \@ref(tables-with-specific-values-displayed-in-the-graphs) Table \@ref(tab:summarycounts-repositories)). Notably, 28 per cent of sampled pre-prints from bioRxiv contained open data markers and 22 per cent of sampled arXiv pre-prints contained markers of open code, the highest proportions of any repository for each type of marker. Our results are similar to @mcguinness2021descriptive, who focus on medRxiv and find that 23 per cent describe open data.
 
 ```{r, summarycounts-overall}
 just_arxiv <-
@@ -441,7 +442,7 @@ all_total <-
 
 The distribution of total sampled pre-prints and sampled pre-prints with open data or code markers roughly follows that of COVID-19-related pre-prints posted in general (Figure \@ref(fig:arxiv-and-monthly-papers-condition-stack)). The proportion of pre-prints with open data or code has fluctuated over time but shows no consistent overall increase or decrease throughout the course of the pandemic, nor in conjunction with increases or decreases in the total number of pre-prints posted to any given repository. In our datasets, very few (if any) pre-prints were sampled for the month of January 2020. None of these pre-prints contained open data or open code markers, thus the 0 per cent rate of open data and code for this month across all repositories should be considered an outlier. 
 
-It is also important to note that pre-prints posted during the early months of the pandemic were likely using, and reusing, publicly available data sources due to an inability to collect original data within a short timeframe. Additionally, `oddpub` does not consider '[t]he reuse of data/code previously published by other researchers' [@citePDDPub]. A different definition of open data could enable pre-prints that reuse publicly available data to have made theirdata available for reproducibility purposes.
+It is also important to note that pre-prints posted during the early months of the pandemic were likely using, and reusing, publicly available data sources due to an inability to collect original data within a short timeframe. Additionally, `oddpub` does not consider '[t]he reuse of data/code previously published by other researchers' [@citePDDPub]. A different definition of open data could enable pre-prints that reuse publicly available data to be considered as having their data available for reproducibility purposes.
 
 The proportion of bioRxiv and medRxiv pre-prints lacking both open data and open code are approximately four per cent higher than the corresponding proportions of 2019 pre-prints, suggesting that the analyzed pre-prints from 2019 may contain an overall higher prevalence of open data and code markers than pre-prints concerning COVID-19. Specifically, we found that open data availability in medRxiv pre-prints was significantly associated with a pre-pandemic registration date ($\chi$^2^ = 4.8508, p < 0.005), as was open code availability for bioRxiv pre-prints ($\chi$^2^ = 14.491, p < 0.005). This would suggest that open data and code practices may have suffered in the context of COVID-19, or that it may be something that is backfilled after posting.
 
@@ -498,7 +499,7 @@ open_status %>%
   scale_fill_manual(values = cbPalette) +
   facet_wrap(~repo,
              scales = "free_y") +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1))
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 ```{r arxiv-and-monthly-papers-condition-stack, fig.cap = "Number of sampled pre-prints posted in 2019, compared with those related to COVID-19: from arXiv (n in 2019 = 1,000; n related to COVID = 1,200), bioRxiv (n in 2019 = 1,000; n related to COVID n = 1,200), and medRxiv (n in 2019 = 1,500; n related to COVID n = 913) distinguished by presence of open data or code markers", out.width="90%", fig.align = "center"}
@@ -557,7 +558,7 @@ month_sum_cov <- rbind(med_month_sum_cov, bio_month_sum_cov, arxiv_month_sum_cov
 
 ## Publication status
 
-The proportion of pre-prints that have been published varies by repository (Table \@ref(tab:published-sample-summary)). Notably, of all COVID-19-related pre-prints in our dataset, approximately 30 per cent of those posted to bioRxiv and nearly one third of those posted to medRxiv were published. This is high in comparison to the proportions from arXiv, and although this might suggest that COVID-19-related pre-prints in biomedical fields have received greater attention overall than pre-prints from other fields, our results in Section \@ref(pre-pandemic-pre-prints) suggest that this pattern pre-dates the pandemic. 
+The proportion of pre-prints that have been published varies by repository (Table \@ref(tab:published-sample-summary)). Notably, of all COVID-19-related pre-prints in our dataset, approximately 30 per cent of those posted to bioRxiv and nearly one third of those posted to medRxiv were published. This is high in comparison to the proportion from arXiv, and although this might suggest that COVID-19-related pre-prints in biomedical fields have received greater attention overall than pre-prints from other fields, our results in Section \@ref(pre-pandemic-pre-prints) suggest that this pattern pre-dates the pandemic. 
 
 <!-- These rates are also low in comparison to 2019 pre-prints (approximately half), which is likely a result of publication delays and the high volume of research output related to COVID-19 posted as pre-prints. -->
 
@@ -682,7 +683,7 @@ There has been a large amount of research on COVID-19 [@da2021publishing]. Many 
 
 To emphasize the ongoing need for open data and code in modelling a pandemic, we consider two high profile epidemiological models that emerged in early 2020. Modelling was conducted by Imperial College London (ICL) [@ferguson2020] and the Institute for Health Metrics and Evaluation (IHME) at the University of Washington [@murray2020], and both were initially posted to pre-print repositories. The ICL model went on to become the most cited pre-print as of December 2020 [@else2020], and both had significant influence over policy and public health decisions worldwide [@adam2020]. An independent review of these two models by @jin2020 found that while code and data were openly available for both, only the ICL model was reproducible due to limited transparency on the underlying methodology of the IHME model. The open-source nature of these models was fundamental to reproduction attempts and is an example of the need for open data and code in COVID-19 research, particularly as pre-prints influence public decision-making. 
 
-In the context of the above factors, it was encouraging to find in our analysis that the proportion of pre-prints with open data or code posted to arXiv increased from 7 per cent pre-pandemic to 25 per cent for COVID-19-related pre-prints. This pattern, however, was not observed among the analyzed bioRxiv and medRxiv pre-prints, and may just reflect the nature of COVID-19 pre-prints. With many pre-prints from these repositories still pertaining to epidemiological modelling, one might hope that they should universally be subject to the same analysis as conducted by @jin2020 as for the examples above, which is made possible by the availability of relevant code and data. Our analysis suggests a need for future investigation and potential overall improvement in open science standards for these types of pre-prints (subject to the data and code considerations already discussed). This need is again emphasized by the new-found speed at which pre-prints may gain public, media, and political attention in the context of the pandemic, particularly those from medRxiv and bioRxiv. One further concern is raised by @da2020silently, who show that there are pre-prints on those two pre-print servers---medRxiv and bioRxiv---that were withdrawn or retracted with relatively little information about the underlying reason, after gaining substantial media attention.
+In the context of the above factors, it was encouraging to find in our analysis that the proportion of pre-prints with open data or code posted to arXiv increased from 7 per cent pre-pandemic to 25 per cent for COVID-19-related pre-prints. This pattern, however, was not observed among the analyzed bioRxiv and medRxiv pre-prints, and may just reflect the nature of COVID-19 pre-prints. With many pre-prints from these repositories still pertaining to epidemiological modelling, one might hope that they should universally be subject to the same analysis as conducted by @jin2020 as for the examples above, which is made possible by the availability of relevant code and data. Our analysis suggests a need for future investigation and potential overall improvement in open science standards for these types of pre-prints (subject to the data and code considerations already discussed). This need is again emphasized by the new-found speed at which pre-prints may gain public, media, and political attention in the context of the pandemic, particularly those from medRxiv and bioRxiv. One further concern is raised by @da2020silently, who shows that there are pre-prints on those two pre-print servers---medRxiv and bioRxiv---that were withdrawn or retracted with relatively little information about the underlying reason, after gaining substantial media attention.
 
 ## The importance of open data and open code
 
@@ -700,6 +701,8 @@ There is demand for timely research and high frequency results because the pande
 <!-- In this paper we consider only pre-prints from medRxiv, but this analysis can and should be extended to other pre-print repositories including bioRxiv and arXiv. The `medrxivr` package [@citemedrxivr] can be used with the bioRxiv API as well, and our code can be modified to conduct the same scraping and text mining procedure as was used for medRxiv data. -->
 
 We wish to expand our analysis to consider the geographic distribution of research and the potential influence of different practices and policies concerning open science as pre-prints vary by location. This is important because the epicenter of the pandemic changed throughout the pandemic, which has implications for our time-based analysis.
+
+A logical next step would be to extend this analysis to additional pre-print servers. An initial iteration of our analyses included samples of pre-pandemic and COVID-19-related pre-prints posted to SocArXiv, a social sciences pre-print server hosted by the Center for Open Science. We validated the ODDPub algorithm against the presence of data links provided by pre-print authors upon submission (available in the pre-print metadata drawn from the Open Science Framework API) and found that the algorithm performed with 52 per cent sensitivity on the 2019 sample and 29 per cent sensitivity for COVID-19-related pre-prints. The high rate of false negatives for open data detection is concerning, and it was decided that the ODDPub algorithm is not suitable for use on pre-prints from this server. A more generalized (or perhaps field specific) algorithm would be necessary for analysis of open data and code availability in SocArXiv and other more specialized servers. Details on validation are available in Appendix \@ref(oddpub-algorithm-performance-on-socarxiv-pre-prints).
 
 We recognize that factors beyond open data and code play a large role in the reproducibility of scientific research. Not all pre-prints providing open data or code will be reproducible. Factors such as data documentation, methodological reporting, software choice, and many others all play a role in the reproduction process and should be regarded with just as much gravity when disseminating results.
 
@@ -810,18 +813,131 @@ rbind(all_total, all_by_type) %>%
 
 ```{r propbyserverandcategory, fig.cap = "Proportion of all preprints in each category, for each preprint server", fig.align = "center"}
 # Number of papers for each open data/code status per month
-open_status %>% 
-  group_by(repo, condition) %>% 
-  count() %>% 
-  ungroup() %>% 
-  group_by(repo) %>% 
-  mutate(proportion = n/(sum(n))) %>% 
-   kable(caption = "Number and proportion of all preprints in each category, for each preprint server", 
-        col.names = c("Repository", "Condition", "Number", "Proportion"),
-        digits = 2,
+open_status %>%
+  group_by(repo, condition) %>%
+  count() %>%
+  ungroup() %>%
+  group_by(repo) %>%
+  mutate(proportion = n/(sum(n))) %>%
+  ungroup() %>%
+  select(condition, n, proportion) %>%
+   # kable(caption = "Number and proportion of all preprints in each category, for each preprint server",
+   #      col.names = c("Repository", "Condition", "Number", "Proportion"),
+   #      digits = 2,
+   #      booktabs = TRUE,
+   #      linesep = ""
+   #      )
+  kable(col.names = c("Markers", "Count", "Proportion of total"),
+        caption = "Number and proportion of all preprints in each category, for each preprint server",
         booktabs = TRUE,
-        linesep = ""
-        )
+        digits = 2,
+        format.args = list(big.mark = ",")) %>%
+  group_rows(index = c("arXiv" = 4, "bioRxiv" = 4, "medRxiv" = 4))  %>%
+  kableExtra::kable_styling(latex_options = "hold_position")
+
+```
+
+# ODDPub algorithm performance on arXiv pre-prints 
+
+We verified the accuracy of the ODDPub algorithm on a subset of our analyzed pre-prints from 2019 from arXiv. We took a simple random sample of 100 papers. In the original validation process, the annotators stratified by detection status prior to sampling to ensure relatively high representation of papers where open data or code was detected. Since the major concern for our manual verification is potential false negatives, this skewed representation was unnecessary. Open data and code status were verified first via the "Code & Data" tab on each pre-print's page on the arXiv website, then by checking for an explicit data availability section within the pre-print PDF, and finally by manually checking the body of the paper using keyword searches. Results were recorded manually in Excel. This mimics the procedure outlined for the original validation of ODDPub [@citePDDPub].
+
+Many of the pre-prints in arXiv did not use data or code, namely those from pure mathematics and physics. There were also several that reused other publicly or privately available data sets, and regardless of whether or not they were shared alongside the paper, these do not count as open data according to the standards outlined by the original authors of the ODDPub algorithm [@citePDDPub]. Algorithmic performance is specified in Table \@ref(tab:arxiv-accuracy-data-2019) and Table \@ref(tab:arxiv-accuracy-code-2019).
+
+```{r arxiv-confusion-data-2019}
+arxiv_2019_manual_results <- read.csv(here::here("validation", "arxiv_2019_validation_sample_COMPLETE.csv"))
+
+arxiv_2019_data_check <- arxiv_2019_manual_results %>%
+  count(is_open_data, manual_open_data) %>%
+  pivot_wider(names_from = manual_open_data, values_from = n) %>%
+  mutate(is_open_data = case_when(is_open_data == 1 ~ "Open data detected", TRUE ~ "No open data detected")) %>%
+  select(is_open_data, `1`, `0`) %>%
+  rename(Predicted = is_open_data, `Data available` = `1`, `No data available` = `0`) %>%
+  arrange(desc(Predicted))
+
+arxiv_2019_data_check %>% kable(caption = "ODDPub predictions for open data compared with manual check, arXiv sample")
+
+```
+
+```{r arxiv-accuracy-data-2019}
+arc_2019_accuracy <- (as.numeric(arxiv_2019_data_check[1,2] + arxiv_2019_data_check[2,3])/nrow(arxiv_2019_manual_results)) %>% round(2)
+arc_2019_sensitivity <- (as.numeric(arxiv_2019_data_check[1,2])/sum(arxiv_2019_data_check$`Data available`)) %>% round(2)
+arc_2019_specificity <- (as.numeric(arxiv_2019_data_check[2,3])/sum(arxiv_2019_data_check$`No data available`)) %>% round(2)
+
+tibble(Metric = c("Accuracy", "Sensitivity", "Specificity"),
+      Value = c(arc_2019_accuracy, arc_2019_sensitivity, arc_2019_specificity)) %>% kable(caption = "ODDPub prediction accuracy, open data, arXiv sample")
+```
+
+```{r arxiv-confusion-code-2019}
+
+arxiv_2019_code_check <- arxiv_2019_manual_results %>%
+  count(is_open_code, manual_open_code) %>%
+  pivot_wider(names_from = manual_open_code, values_from = n) %>%
+  mutate(is_open_code = case_when(is_open_code == 1 ~ "Open code detected", TRUE ~ "No open code detected")) %>%
+  select(is_open_code, `1`, `0`) %>%
+  rename(Predicted = is_open_code, `Code available` = `1`, `No code available` = `0`) %>%
+  arrange(desc(Predicted))
+
+arxiv_2019_code_check %>% kable(caption = "ODDPub predictions for open code compared with manual check, arXiv sample")
+```
+
+```{r arxiv-accuracy-code-2019}
+arc_2019_code_accuracy <- (as.numeric(arxiv_2019_code_check[1,2] + arxiv_2019_code_check[2,3])/nrow(arxiv_2019_manual_results)) %>% round(2)
+arc_2019_code_sensitivity <- (as.numeric(arxiv_2019_code_check[1,2])/sum(arxiv_2019_code_check$`Code available`)) %>% round(2)
+arc_2019_code_specificity <- (as.numeric(arxiv_2019_code_check[2,3])/sum(arxiv_2019_code_check$`No code available`)) %>% round(2)
+
+tibble(Metric = c("Accuracy", "Sensitivity", "Specificity"),
+      Value = c(arc_2019_code_accuracy, arc_2019_code_sensitivity, arc_2019_code_specificity)) %>% kable(caption = "ODDPub prediction accuracy, open code, arXiv sample")
+```
+
+# ODDPub algorithm performance on SocArXiv pre-prints
+
+SocArXiv allows authors to input a link to their data source/repository upon submission of a pre-print. This link can then be accessed via the API metadata. The presence of a data link was used as an indicator that a pre-print provides open data for the purposes of validating the ODDPub algorithm. When available, a data link is stored under the variable name "attributes.data_links". The data was manipulated using functions from the R package tidyverse [@citetidyverse] to create a binary variable indicating data availability or lack thereof. We assume "attributes.data_links" to indicate the true availability of data for the purposes of validating the ODDPub algorithm. It is possible, however, that some authors failed to indicate their data availability in the proper field upon posting to SocArXiv, and thus some of the false positive may in fact be true positives.
+
+Against the data availability indicated by pre-print authors in our 2019 sample, the ODDPub algorithm performed with an accuracy of 93 percent, a sensitivity of 52 percent, and a specificity of 94 percent. In our 2020 and 2021 sample, the algorithm performed with an accuracy of 79 percent, a sensitivity of 29 percent, and a specificity of 92 percent. Specific predictions are broken down in Table \@ref(tab:confusion-matrix-2019) and Table \@ref(tab:confusion-matrix-2020).
+
+It is unclear the precise inclusion criteria for data submitted to the data link field. It is possible that some of the links provided lead to data sets that are publicly available for reuse, which would not constitute "open data" by the ODDPub algorithm's definition, in which case the accuracy could potentially be higher in reality than 93 percent and 79 percent in the samples considered.
+
+
+```{r, confusion-matrix-2019}
+# SocArXiv 2019 Confusion Matrix
+soc_2019_check <- socarxiv_2019_open_data_results %>%
+  mutate(data_link_available = case_when(is.na(attributes.data_links) ~ "No data linked", TRUE ~ "Data linked")) %>%
+  count(data_link_available, is_open_data) %>%
+  pivot_wider(names_from = data_link_available, values_from = n) %>%
+  mutate(is_open_data = case_when(is_open_data == 1 ~ "Open data detected", TRUE ~ "No open data detected")) %>%
+  rename(`ODDPub algorithm`= is_open_data) %>%
+  arrange(desc(`ODDPub algorithm`))
+soc_2019_check %>% kable(caption = "ODDPub predictions for open data compared with data links provided by authors, 2019 SocArXiv sample")
+```
+
+```{r, accuracy-2019}
+soc_2019_accuracy <- (as.numeric(soc_2019_check[1,2] + soc_2019_check[2,3])/nrow(socarxiv_2019_open_data_results)) %>% round(2)
+soc_2019_sensitivity <- (as.numeric(soc_2019_check[1,2])/sum(soc_2019_check$`Data linked`)) %>% round(2)
+soc_2019_specificity <- (as.numeric(soc_2019_check[2,3])/sum(soc_2019_check$`No data linked`)) %>% round(2)
+
+tibble(Metric = c("Accuracy", "Sensitivity", "Specificity"),
+      Value = c(soc_2019_accuracy, soc_2019_sensitivity, soc_2019_specificity)) %>% kable(caption = "ODDPub prediction accuracy, open data, 2019 SocArXiv sample")
+```
+
+```{r confusion-matrix-2020}
+# SocArXiv 2019 Confusion Matrix
+soc_2020_check <- socarxiv_open_data_results %>%
+  mutate(data_link_available = case_when(is.na(attributes.data_links) ~ "No data linked", TRUE ~ "Data linked")) %>%
+  count(data_link_available, is_open_data) %>%
+  pivot_wider(names_from = data_link_available, values_from = n) %>%
+  mutate(is_open_data = case_when(is_open_data == 1 ~ "Open data detected", TRUE ~ "No open data detected")) %>%
+  rename(`ODDPub algorithm`= is_open_data) %>%
+  arrange(desc(`ODDPub algorithm`))
+soc_2020_check %>% kable(caption = "ODDPub predictions for open data compared with data links provided by authors, COVID-19-related SocArXiv pre-prints sample")
+```
+
+```{r accuracy-2020}
+soc_2020_accuracy <- (as.numeric(soc_2020_check[1,2] + soc_2020_check[2,3])/nrow(socarxiv_open_data_results)) %>% round(2)
+soc_2020_sensitivity <- (as.numeric(soc_2020_check[1,2])/sum(soc_2020_check$`Data linked`)) %>% round(2)
+soc_2020_specificity <- (as.numeric(soc_2020_check[2,3])/sum(soc_2020_check$`No data linked`)) %>% round(2)
+
+tibble(Metric = c("Accuracy", "Sensitivity", "Specificity"),
+      Value = c(soc_2020_accuracy, soc_2020_sensitivity, soc_2020_specificity)) %>% kable(caption = "ODDPub prediction accuracy, open data, COVID-19-related SocArXiv pre-prints sample")
 ```
 
 <!-- # Markers -->
