--- a/validation/oddpub_validation.Rmd
+++ b/validation/oddpub_validation.Rmd
@@ -1,11 +1,12 @@
 ---
 title: "ODDPub Validation for SocArXiv and arXiv"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = F)
 library(tidyverse)
+library(knitr)
 
 arxiv_open_data_results <- 
   read_csv(here::here("outputs/data/arxiv_open_data_results.csv"))
@@ -31,31 +32,31 @@ socarxiv_2019_open_data_results <-
 
 ### Data
 
-Under "attributes.has_data_links", "available" means data link exists, everything else means data link does not exist. NA appears to be the same as "not_applicable", meaning no data link and no justification (i.e. "attributes.why_no_data" is also NA). "no" means data was used but is not available. Justification should be provided in "attributes.why_no_data".
+SocArXiv allows authors to input a link to their data source/repository upon submission of a pre-print. This link can then be accessed via the API metadata. The presence of a data link was used as an indicator that a pre-print provides open data for the purposes of validating the ODDPub algorithm. When available, a data link is stored under the variable name "attributes.data_links". The data was manipulated using functions from the R package tidyverse [@tidyverse] to create a binary variable indicating data availability or lack thereof. We assume "attributes.data_links" to indicate the true availability of data for the purposes of validating the ODDPub algorithm. It is possible, however, that some authors failed to indicate their data availability in the proper field upon posting to SocArXiv, and thus some of the false positive may in fact be true positives. This was not verified directly in order to allow us to more easily consider the whole sample in our validation.
 
-Since ODDPub does not check for areas where open data is not applicable, we should go by 0/1 according to attributes.data_links being populated (i.e. "data_link_available" as defined above).
+Against the data availability indicated by pre-print authors in our 2019 sample, the ODDPub algorithm performed with an accuracy of 93 percent, a sensitivity of 52 percent, and a specificity of 94 percent. In our 2020 and 2021 sample, the algorithm performed with an accuracy of 79 percent, a sensitivity of 29 percent, and a specificity of 92 percent. Specific predictions are broken down in Table \@ref(tab:confusion-matrix-2019) and Table \@ref(tab:confusion-matrix-2020).
 
-We assume the attributes.data_links to be the "Gold Standard", i.e. indicating the true availability of data. It is possible, however, that some authors failed to indicate their data availability in the proper field upon posting to SocArXiv, and this some of the "false positive" may in fact be true positives.
+It is unclear the precise inclusion criteria for data submitted to the data link field. It is possible that some of the links provided lead to data sets that are publicly available for reuse, which would not constitute "open data" by the ODDPub algorithm's definition, in which case the accuracy could potentially be higher in reality than 93 percent and 79 percent in the samples considered.
 
-```{r confusion-matrix-2019}
+```{r, confusion-matrix-2019}
 # SocArXiv 2019 Confusion Matrix
 soc_2019_check <- socarxiv_2019_open_data_results %>%
   mutate(data_link_available = case_when(is.na(attributes.data_links) ~ "No data linked", TRUE ~ "Data linked")) %>%
   count(data_link_available, is_open_data) %>%
   pivot_wider(names_from = data_link_available, values_from = n) %>%
   mutate(is_open_data = case_when(is_open_data == 1 ~ "Open data detected", TRUE ~ "No open data detected")) %>%
-  rename(Predicted = is_open_data) %>%
-  arrange(desc(Predicted))
-soc_2019_check
+  rename(`ODDPub algorithm`= is_open_data) %>%
+  arrange(desc(`ODDPub algorithm`))
+soc_2019_check %>% kable(caption = "ODDPub predictions for open data compared with data links provided by authors, 2019 sample")
 ```
 
-```{r accuracy-2019}
-soc_2019_accuracy <- as.numeric(soc_2019_check[1,2] + soc_2019_check[2,3])/nrow(socarxiv_2019_open_data_results)
-soc_2019_sensitivity <- as.numeric(soc_2019_check[1,2])/sum(soc_2019_check$`Data linked`) %>% as.numeric()
-soc_2019_specificity <- as.numeric(soc_2019_check[2,3])/sum(soc_2019_check$`No data linked`)
+```{r, accuracy-2019}
+soc_2019_accuracy <- (as.numeric(soc_2019_check[1,2] + soc_2019_check[2,3])/nrow(socarxiv_2019_open_data_results)) %>% round(2)
+soc_2019_sensitivity <- (as.numeric(soc_2019_check[1,2])/sum(soc_2019_check$`Data linked`)) %>% round(2)
+soc_2019_specificity <- (as.numeric(soc_2019_check[2,3])/sum(soc_2019_check$`No data linked`)) %>% round(2)
 
 tibble(Metric = c("Accuracy", "Sensitivity", "Specificity"),
-      Value = c(soc_2019_accuracy, soc_2019_sensitivity, soc_2019_specificity))
+      Value = c(soc_2019_accuracy, soc_2019_sensitivity, soc_2019_specificity)) %>% kable(caption = "ODDPub prediction accuracy, 2019 sample")
 ```
 
 ```{r false-negatives-2019, eval = FALSE}
@@ -87,18 +88,18 @@ soc_2020_check <- socarxiv_open_data_results %>%
   count(data_link_available, is_open_data) %>%
   pivot_wider(names_from = data_link_available, values_from = n) %>%
   mutate(is_open_data = case_when(is_open_data == 1 ~ "Open data detected", TRUE ~ "No open data detected")) %>%
-  rename(Predicted = is_open_data) %>%
-  arrange(desc(Predicted))
-soc_2020_check
+  rename(`ODDPub algorithm`= is_open_data) %>%
+  arrange(desc(`ODDPub algorithm`))
+soc_2020_check %>% kable(caption = "ODDPub predictions for open data compared with data links provided by authors, COVID-19-related pre-prints sample")
 ```
 
 ```{r accuracy-2020}
-soc_2020_accuracy <- as.numeric(soc_2020_check[1,2] + soc_2020_check[2,3])/nrow(socarxiv_open_data_results)
-soc_2020_sensitivity <- as.numeric(soc_2020_check[1,2])/sum(soc_2020_check$`Data linked`) %>% as.numeric()
-soc_2020_specificity <- as.numeric(soc_2020_check[2,3])/sum(soc_2020_check$`No data linked`)
+soc_2020_accuracy <- (as.numeric(soc_2020_check[1,2] + soc_2020_check[2,3])/nrow(socarxiv_open_data_results)) %>% round(2)
+soc_2020_sensitivity <- (as.numeric(soc_2020_check[1,2])/sum(soc_2020_check$`Data linked`)) %>% round(2)
+soc_2020_specificity <- (as.numeric(soc_2020_check[2,3])/sum(soc_2020_check$`No data linked`)) %>% round(2)
 
 tibble(Metric = c("Accuracy", "Sensitivity", "Specificity"),
-      Value = c(soc_2020_accuracy, soc_2020_sensitivity, soc_2020_specificity))
+      Value = c(soc_2020_accuracy, soc_2020_sensitivity, soc_2020_specificity)) %>% kable(caption = "ODDPub prediction accuracy, COVID-19-related pre-prints sample")
 ```
 ```{r false-negatives-2020, eval = FALSE}
 socarxiv_open_data_results %>%
